2004-11-23 Scott Dattalo <scott@dattalo.com>
	* cli/input.cc: Fixed tab completion related window's crash
	* gui/gui_symbols.cc: Windows doesn't support strndup()
	
2004-11-22 Scott Dattalo <scott@dattalo.com>
	* cli/input.cc: buffer overflow in command_generator().
	* src/ioports.cc, src/pic-registers.cc, src/registers.cc,
	src/stimuli.cc: valgrind check - unitialized memory.
	* src/value.h, src/value.cc, src/interface.h, src/symbol.cc,
	src/symbol.h, gui/gui_profile.cc, gui/gui_regwin.cc, gui/gui_regwin.h,
	gui/gui_src.cc, gui/gui_src.h, gui/gui_src_asm.cc, gui/gui_stack.cc,
	gui/gui_symbols.cc, gui/gui_watch.cc, gui/gui_watch.h:
	The gui was accessing the symbol table improperly. A new 
	Symbol_Table_Iterator class was created to abstract accesses to the 
	symbol table. In addition, get() and set() methods were added to
	the symbol classes that will allow reading/writing symbol values
	using strings.
	
2004-11-19 Scott Dattalo <scott@dattalo.com>
	* gui/gui_breadboard.cc, gui/gui_regwin.cc, cli/parse.yy: valgrind
	check - fixed some uninitialized memory.
	
2004-11-19 Scott Dattalo <scott@dattalo.com>
	* gui/gui_breadboard.cc: Don't let modules open a closed breadboard 
	window.
	
2004-11-18 Scott Dattalo <scott@dattalo.com>
	* cli/input.cc: disallow TAB characters under windows since it
	causes a crash most of the time.
	* modules/bitlog.cc, modules/bytelog.cc, modules/ttoken.cc,
	modules/makefile.mingw: These were not getting built under windows.
	* plat/win32/gpsim.nsi: added pthreadVC.dll to gpsim's windows binary
	distribution.
	* doc/gpsimWin32.html: Updated documentation for pthreads.
	
2004-11-17 Scott Dattalo <scott@dattalo.com>
	* src/processor.cc, src/value.cc, src/value.h: made Integer,Float
	and Boolean values get() and set() their values through just one
	member function. This allows derived attributes to trap reads and
	writes to the values.
	
2004-11-16 Scott Dattalo <scott@dattalo.com>